[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokpipe"
version = "0.1.0"
description = "Data pipeline for TikTok analytics. Your exports in, real metrics out."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "aroaxinping" },
]
keywords = ["tiktok", "analytics", "data-pipeline", "content-creator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.scripts]
tokpipe = "tokpipe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
