[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tokpipe"
version = "0.2.0"
description = "Data pipeline for TikTok analytics. Your exports in, real metrics out."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "aroaxinping" },
]
keywords = ["tiktok", "analytics", "data-pipeline", "content-creator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
    "plotly>=5.18",
    "pyyaml>=6.0",
]

[project.scripts]
tokpipe = "tokpipe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
